fix flicker of wiggle track score display

--- a/track_styles.css
+++ b/track_styles.css
@@ -411,6 +411,6 @@ div.generic_parent-hist {
     font-weight: bold;
 }
 
-.trackVerticalPositionIndicator {
+.wigglePositionIndicator {
     background: #999;
 }
